--- a/jd/LAWS50025 - Torts/0002-duty-existence-vs-scope.yml
+++ b/jd/LAWS50025 - Torts/0002-duty-existence-vs-scope.yml
@@ -1,24 +1,24 @@
 front: How do courts distinguish the existence of a duty of care from its scope, and
   how should you apply that distinction in a Victorian negligence problem?
 back: |
-  Issue. How do courts distinguish duty existence from its scope, and how should you apply that sequencing in Victorian negligence so you do not collapse into breach or causation?
+  Issue. Separate duty existence from scope so Victorian negligence stays sequenced before breach or causation.
 
-  Rule. Existence asks whether any duty is owed; scope asks what the duty required in the circumstances. Existence turns on foreseeability tempered by salient features and coherence (Sullivan v Moody [2001] HCA 59; (2001) 207 CLR 562, 576 [50]). Salient features include vulnerability, control, assumption/reliance, and indeterminacy (Perre v Apand [1999] HCA 36; (1999) 198 CLR 180, 225 [118]; Woolcock Street Investments [2004] HCA 16; (2004) 216 CLR 515, 529 [23]); public authority discretion and statutory coherence loom large (Graham Barclay Oysters [2002] HCA 54, 211 CLR 540, 579 [79]). Omissions generally attract no duty absent special relationships (Crimmins [1999] HCA 59; Stuart v Kirkland-Veenstra [2009] HCA 15). Psychiatric harm is recognised but constrained (Tame/Annetts [2002] HCA 35). Scope narrows duty once existence is found, confining it to the risk that materialised and to context (Modbury Triangle v Anzil [2000] HCA 61; (2000) 205 CLR 254, 269 [35]).
+  Rule. Existence turns on foreseeability filtered by salient features and coherence (Sullivan v Moody; Perre; Woolcock). Graham Barclay Oysters ties public authorities to statutory purpose, while Crimmins, Stuart v Kirkland-Veenstra, and Tame/Annetts show omissions or psychiatric harm demand control or assumed responsibility. Once existence is satisfied, Modbury Triangle confines scope to the risk that materialised and its setting.
 
-  Application scaffold. 1) Existence: address foreseeability, salient features, and coherence (policy/statute). 2) If yes, scope: confine to the precise risk that eventuated considering vulnerability/control and third-party interventions. 3) Only then breach: apply Wrongs Act 1958 (Vic) s 48. 4) Causation/scope of liability: Wrongs Act s 51. 5) Defences/damages: contributory negligence (CN) s 26, volenti s 54, Pt VBA caps (e.g. s 28ID, s 28LE) and Pt IVAA proportionate liability if engaged; ACL s 18 may overlay.
+  Application scaffold. 1) Existence: map foreseeability, salient features, and coherence before naming duty. 2) If satisfied, define scope by isolating the risk, actors, and setting. 3) Analyse breach via Wrongs Act s 48, then causation/scope under s 51 with interveners. 4) Close with remedies/defences: CN (s 26), volenti (s 54), Pt VBA caps, Pt IVAA proportionate liability, plus ACL s 18 overlay.
 
-  Authorities map. Existence: Sullivan 207 CLR 562, 576 [50]; Perre 198 CLR 180, 225 [118]; Woolcock 216 CLR 515, 529 [23]; Crimmins 200 CLR 1. Public authority coherence: Graham Barclay Oysters 211 CLR 540, 579 [79]. Omissions: Stuart v Kirkland-Veenstra 237 CLR 215. Psychiatric harm: Tame/Annetts 211 CLR 317. Scope: Modbury 205 CLR 254, 269 [35].
 
-  Statutory hook. Wrongs Act 1958 (Vic) ss 48, 51, 26, 54; Pt VBA (incl s 28ID, s 28LE); Pt IVAA.
+  Authorities map. Existence: Sullivan 207 CLR 562, 576 [50]; Perre 198 CLR 180, 225 [118]; Woolcock 216 CLR 515, 529 [23]; Brookfield 254 CLR 185, 202 [46]. Omissions/psychiatric: Crimmins 200 CLR 1; Stuart 237 CLR 215; Tame/Annetts 211 CLR 317. Public authorities: Graham Barclay Oysters 211 CLR 540, 579 [79]. Scope: Modbury 205 CLR 254, 269 [35].
 
-  Tripwires. Conflating existence with scope. Importing the Shirt calculus into duty analysis. Ignoring omissions/psychiatric harm limits. Skipping statutory coherence for public authorities. Failing to separate breach (s 48) from causation (s 51).
+  Statutory hook. Wrongs Act 1958 (Vic) ss 26, 48, 51, 54; Pt VBA caps/thresholds; Pt IVAA proportionate liability; consider ACL s 18 for concurrent statutory claims.
 
-  Conclusion. Sequence existence → scope → breach → causation; state each gate explicitly to show doctrinal discipline and statutory literacy.
+  Tripwires. Avoid importing the Shirt calculus into existence, collapsing scope into s 51, or skipping coherence checks; keep psychiatric-harm and omission gates tight.
+
+  Conclusion. Sequence existence → scope → breach → causation → remedy to show doctrinal discipline and statutory literacy.
 why_it_matters: |
   Examiners reward sequenced answers: existence before scope, then breach (s 48), then causation (s 51). This avoids conflation and shows statutory literacy (Pt VBA caps; CN; volenti). Referencing Sullivan, Perre/Woolcock, Modbury and public-authority coherence earns marks for policy discipline and accuracy.
 
-mnemonic: 'E.S.C.O.P.E.: Existence → Salient features → Coherence → Omissions/Psychiatric
-  harm → Pinpoints (Wrongs Act/ACL) → Exam wrap (defences/damages)'
+mnemonic: "E-SCOPE (exist→scope→s48→s51→caps→exam)"
 diagram: |
   ```mermaid
   mindmap
@@ -58,7 +58,7 @@ keywords:
   - statutory-coherence
 reading_level: "Plain English (JD)"
 tags:
-- LAWS50025 - Torts
-- Duty
-- Exam_Fundamentals
-- MLS_H1
+  - LAWS50025_Torts
+  - Duty
+  - Exam_Fundamentals
+  - MLS_H1
